--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ branches:
   - master
 
 after_success:
-  - julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(Pkg.dir("HaltonSequences")); include(joinpath("docs", "make.jl"))'
+  - julia -e 'using Pkg; Pkg.add("Documenter")'
+  - julia -e 'using Pkg; cd(Pkg.dir("HaltonSequences")); include(joinpath("docs", "make.jl"))'
