--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ branches:
   - master
 
 after_success:
-  - julia -e 'using Pkg; Pkg.add("Documenter")'
+  - julia -e 'using Pkg; ps=Pkg.PackageSpec(name="Documenter", version="0.19"); Pkg.add(ps); Pkg.pin(ps)'
   - julia -e 'using Pkg; cd(Pkg.dir("HaltonSequences")); include(joinpath("docs", "make.jl"))'
